# powermem

./: .env.example  .env.example.full  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  README_JP.md  pyproject.toml  setup.cfg
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/scripts/: select_regression_shard.py
.github/workflows/: build.yml  build_docker.yml  deploy.yml  deploy_pages.yml  export_docker_image.yml  ob441-reg.yml  plugins-build.yml  plugins-publish-vscode.yml  publish.yaml  publish.yml  regression.yml  sync-project-milestones.yml  test-frontend.yml  test.yml  translate.yml
apps/: README.md
apps/agent-plugin/: CHANGELOG.md  README.md  SETUP.md  UNINSTALL.md  go.mod
apps/claude-code-plugin/: .gitignore  README.md  SETUP.md  UNINSTALL.md
apps/codex-plugin/: .mcp.json  README.md
apps/mcp-client/: SETUP.md
apps/opencode-plugin/: README.md  plugin.json  powermem-capture.ts
apps/powermem-codex-plugin/: README.md  SETUP.md  UNINSTALL.md  go.mod
apps/vscode-extension/: README.md  SETUP.md  UNINSTALL.md  package.json
benchmark/: README.md
benchmark/locomo/: run.sh
benchmark/lomoco/: .env.example  README.md  evals.py  generate_scores.py  prompts.py  requirements.txt  run.sh  run_experiments.py
benchmark/server/: .env.example  main.py
configs/: env.example  minienv.example
dashboard/: .gitignore
dashboard/src/: routeTree.gen.ts
docker/: DOCKER.md  Dockerfile  Dockerfile.binaries-centos7  Dockerfile.claude-hook-regression  README.md  docker-compose.yml  docker-entrypoint.sh
docs/api/: 0001-memory.md  0002-async_memory.md  0003-agents.md  0004-mcp.md  0005-api_server.md  overview.md
docs/architecture/: overview.md
docs/benchmark/: overview.md
docs/development/: overview.md
docs/examples/: overview.md  scenario_10_sparse_vector.ipynb  scenario_10_sparse_vector.md  scenario_1_basic_usage.ipynb  scenario_1_basic_usage.md  scenario_2_intelligent_memory.ipynb  scenario_2_intelligent_memory.md  scenario_3_multi_agent.ipynb  scenario_3_multi_agent.md  scenario_4_async_operations.ipynb  scenario_4_async_operations.md  scenario_5_custom_integration.ipynb  scenario_5_custom_integration.md  scenario_6_sub_stores.ipynb  scenario_6_sub_stores.md  scenario_7_multimodal.ipynb  scenario_7_multimodal.md  scenario_8_ebbinghaus_forgetting_curve.ipynb  scenario_8_ebbinghaus_forgetting_curve.md  scenario_9_user_memory.ipynb  scenario_9_user_memory.md
docs/guides/: 0001-getting_started.md  0002-getting_started_async.md  0003-configuration.md  0004-custom_prompts_usage.md  0005-multi_agent.md  0006-sub_stores.md  0007-multimodal.md  0008-ebbinghaus_forgetting_curve.md  0009-integrations.md  0010-user_memory.md  0011-sparse_vector.md  1000-other_notes.md  overview.md
docs/integrations/: agents.md  agentscope.md  claude_code.md  cline.md  codex.md  cursor.md  github_copilot.md  mcp_client.md  opencode.md  overview.md  qoder.md  vs_code.md
docs/migration/: sparse_vector_migration.md
docs/website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
examples/: README.md  agent_memory.py  basic_usage.py  intelligent_memory_demo.py
examples/langchain/: README.md  __init__.py  healthcare_support_bot.py  requirements.txt
examples/langgraph/: README.md  __init__.py  customer_service_bot.py  requirements.txt
scripts/: build_binary_package.sh  build_linux_binaries.sh  check_package_versions.py  deploy-frontend-clean.sh  deploy-frontend.sh  powermem-server-launch.sh  powermem-server-service.sh  smoke_binary_package.py  sync-website-docs.sh
src/powermem/: __init__.py  (+5 more)
tests/: __init__.py
(+544 files in other folders)
