[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powermem"
version = "0.3.0"
description = "Intelligent Memory System - Persistent memory layer for LLM applications"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "powermem Team", email = "open_oceanbase@oceanbase.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.21.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "slowapi>=0.1.9",
    "click>=8.0.0",
    "rank-bm25>=0.2.2",
    "pyobvector>=0.2.0,<0.3.0",
    "jieba>=0.42.1",
    "azure-identity>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "psycopg>=3.2.8",
    "psycopg-pool>=3.2.6,<4.0.0",
    "together>=0.2.10",
    "openai>=1.90.0,<3.0.0",
    "anthropic>=0.7.0",
    "ollama>=0.1.0",
    "vertexai>=0.1.0",
    "google-generativeai>=0.3.0",
    "google-genai>=1.0.0",
    "dashscope>=1.14.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-community>=0.4.1",
]
extras = [
    "sentence-transformers>=5.0.0",
]


[project.urls]
Homepage = "https://github.com/powermem/powermem"
Documentation = "https://powermem.readthedocs.io"
Repository = "https://github.com/powermem/powermem.git"
Issues = "https://github.com/powermem/powermem/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
powermem-server = "server.cli.server:server"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["powermem"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "e2e_config: End-to-end tests requiring real configuration (not included in default test suite)",
    "slow: Slow running tests",
]
